// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delivered should render  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Image
        source={
          Object {
            "testUri": "../../../assets/rewards-confirmed/delivered.png",
          }
        }
        style={
          Object {
            "height": 330,
            "width": 530,
          }
        }
      />,
      "style": Object {
        "height": 330,
        "marginBottom": 88,
        "marginTop": 200,
        "width": 530,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "source": Object {
          "testUri": "../../../assets/rewards-confirmed/delivered.png",
        },
        "style": Object {
          "height": 330,
          "width": 530,
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Image
          source={
            Object {
              "testUri": "../../../assets/rewards-confirmed/delivered.png",
            }
          }
          style={
            Object {
              "height": 330,
              "width": 530,
            }
          }
        />,
        "style": Object {
          "height": 330,
          "marginBottom": 88,
          "marginTop": 200,
          "width": 530,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": Object {
            "testUri": "../../../assets/rewards-confirmed/delivered.png",
          },
          "style": Object {
            "height": 330,
            "width": 530,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Failed should render  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Overlay
        icon={
          Object {
            "testUri": "../../../assets/rewards-confirmed/failedIcon.png",
          }
        }
        text="purchase failed"
      />,
      "style": Array [
        Object {
          "height": 330,
          "marginBottom": 88,
          "marginTop": 200,
          "width": 530,
        },
        Object {
          "backgroundColor": "rgb(235,235,235)",
        },
      ],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "icon": Object {
          "testUri": "../../../assets/rewards-confirmed/failedIcon.png",
        },
        "text": "purchase failed",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Overlay
          icon={
            Object {
              "testUri": "../../../assets/rewards-confirmed/failedIcon.png",
            }
          }
          text="purchase failed"
        />,
        "style": Array [
          Object {
            "height": 330,
            "marginBottom": 88,
            "marginTop": 200,
            "width": 530,
          },
          Object {
            "backgroundColor": "rgb(235,235,235)",
          },
        ],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "icon": Object {
            "testUri": "../../../assets/rewards-confirmed/failedIcon.png",
          },
          "text": "purchase failed",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Failed should render  2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Image
          source={
            Object {
              "testUri": "../../../assets/rewards-confirmed/pending.png",
            }
          }
          style={
            Object {
              "height": 330,
              "width": 530,
            }
          }
        />,
        <Overlay
          icon={
            Object {
              "testUri": "../../../assets/icons/clock.png",
            }
          }
          text="purchase pending"
        />,
      ],
      "style": Object {
        "height": 330,
        "marginBottom": 88,
        "marginTop": 200,
        "width": 530,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": Object {
            "testUri": "../../../assets/rewards-confirmed/pending.png",
          },
          "style": Object {
            "height": 330,
            "width": 530,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "icon": Object {
            "testUri": "../../../assets/icons/clock.png",
          },
          "text": "purchase pending",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Image
            source={
              Object {
                "testUri": "../../../assets/rewards-confirmed/pending.png",
              }
            }
            style={
              Object {
                "height": 330,
                "width": 530,
              }
            }
          />,
          <Overlay
            icon={
              Object {
                "testUri": "../../../assets/icons/clock.png",
              }
            }
            text="purchase pending"
          />,
        ],
        "style": Object {
          "height": 330,
          "marginBottom": 88,
          "marginTop": 200,
          "width": 530,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": Object {
              "testUri": "../../../assets/rewards-confirmed/pending.png",
            },
            "style": Object {
              "height": 330,
              "width": 530,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "icon": Object {
              "testUri": "../../../assets/icons/clock.png",
            },
            "text": "purchase pending",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
